--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<script type="text/javascript" src="script.js"></script>
+	<title>Tip Calculator</title>
 </head>
 <body>
-<input type="number" name="bill" id="bill">
-<select id="rating">
+	<p>Enter Bill Amount</p><br>
+	<input type="number" name="bill" id="bill"><br>
+	<p>How was the Quality of service?</p><br>
+	<select id="rating">
 	<option value="0.3">Excellent</option>
 	<option value="0.2">Good</option>
 	<option value="0.15">OK</option>
 	<option value="0.1">Bad</option>
 	<option value="0.05">Terrible</option>
-</select>
-<input type="number" name="people"  id="people">
-<button id="submit">Submit</button>
-<p id="display"></p>
+	</select><br>
+	<p>Enter number of people joining the feast</p><br>
+	<input type="number" name="people"  id="people"><br>
+	<button id="submit">Submit</button><br>
+	<p id="display"></p><br>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
